--- a/configuration/di/controllers.yml
+++ b/configuration/di/controllers.yml
@@ -10,7 +10,7 @@ services:
         calls: [['setTemplate', ['delete.confirm.twig']]]
 
     dashboard.page:
-        class: 'QL\Hal\Controllers\DashboardController'
+        class: 'Hal\UI\Controllers\DashboardController'
         arguments:
             - '@dashboard.twig'
             - '@currentUser'
@@ -22,13 +22,13 @@ services:
         calls: [['setTemplate', ['dashboard.twig']]]
 
     login.page:
-        class: 'QL\Hal\Controllers\LoginController'
+        class: 'Hal\UI\Controllers\LoginController'
         arguments: ['@login.twig', '@stats']
     login.twig:
         parent: 'twig.auto.template'
         calls: [['setTemplate', ['login.twig']]]
     login.handler:
-        class: 'QL\Hal\Controllers\LoginHandler'
+        class: 'Hal\UI\Controllers\LoginHandler'
         arguments:
             - '@twig.context'
             - '@ldap.auth'
@@ -39,11 +39,11 @@ services:
             - '@slim.request'
 
     logout.handler:
-        class: 'QL\Hal\Controllers\LogoutController'
+        class: 'Hal\UI\Controllers\LogoutController'
         arguments: ['@session', '@url']
 
     latest.release.page:
-        class: 'QL\Hal\Controllers\LatestReleaseController'
+        class: 'Hal\UI\Controllers\LatestReleaseController'
         arguments: ['@latest.release.twig']
     latest.release.twig:
         parent: 'twig.auto.template'
@@ -54,14 +54,14 @@ services:
     ####################################################################################################################
 
     queue.page:
-        class: 'QL\Hal\Controllers\QueueController'
+        class: 'Hal\UI\Controllers\QueueController'
         arguments: ['@queue.twig', '@doctrine.em']
     queue.twig:
         parent: 'twig.auto.template'
         calls: [['setTemplate', ['queue.twig']]]
 
     queue.history.page:
-        class: 'QL\Hal\Controllers\QueueHistoryController'
+        class: 'Hal\UI\Controllers\QueueHistoryController'
         arguments:
             - '@queue.history.twig'
             - '@doctrine.em'
@@ -77,7 +77,7 @@ services:
     ####################################################################################################################
 
     group.page:
-        class: 'QL\Hal\Controllers\Group\GroupController'
+        class: 'Hal\UI\Controllers\Group\GroupController'
         arguments:
             - '@group.twig'
             - '@doctrine.em'
@@ -88,7 +88,7 @@ services:
         calls: [['setTemplate', ['group/group.twig']]]
 
     group.add.page:
-        class: 'QL\Hal\Controllers\Group\AddGroupController'
+        class: 'Hal\UI\Controllers\Group\AddGroupController'
         arguments:
             - '@group.add.twig'
             - '@doctrine.em'
@@ -99,7 +99,7 @@ services:
         calls: [['setTemplate', ['group/group.add.twig']]]
 
     group.edit.page:
-        class: 'QL\Hal\Controllers\Group\EditGroupController'
+        class: 'Hal\UI\Controllers\Group\EditGroupController'
         arguments:
             - '@group.edit.twig'
             - '@doctrine.em'
@@ -111,7 +111,7 @@ services:
         parent: 'twig.auto.template'
         calls: [['setTemplate', ['group/group.edit.twig']]]
     group.remove.handler:
-        class: 'QL\Hal\Controllers\Group\RemoveGroupController'
+        class: 'Hal\UI\Controllers\Group\RemoveGroupController'
         arguments:
             - '@doctrine.em'
             - '@session.flasher'
@@ -123,7 +123,7 @@ services:
     ####################################################################################################################
 
     build.page:
-        class: 'QL\Hal\Controllers\Build\BuildController'
+        class: 'Hal\UI\Controllers\Build\BuildController'
         arguments:
             - '@build.twig'
             - '@hal.build'
@@ -134,7 +134,7 @@ services:
         calls: [['setTemplate', ['build/build.twig']]]
 
     build.start.page:
-        class: 'QL\Hal\Controllers\Build\StartBuildController'
+        class: 'Hal\UI\Controllers\Build\StartBuildController'
         arguments:
             - '@build.start.twig'
             - '@doctrine.em'
@@ -148,7 +148,7 @@ services:
         calls: [['setTemplate', ['build/start.twig']]]
 
     build.start.handler:
-        class: 'QL\Hal\Controllers\Build\StartBuildHandler'
+        class: 'Hal\UI\Controllers\Build\StartBuildHandler'
         arguments:
             - '@doctrine.em'
             - '@build.start.validator'
@@ -159,7 +159,7 @@ services:
             - '@sticky.environment'
             - '@hal.application'
     build.start.validator:
-        class: 'QL\Hal\Validator\BuildStartValidator'
+        class: 'Hal\UI\Validator\BuildStartValidator'
         arguments:
             - '@doctrine.em'
             - '@github'
@@ -168,7 +168,7 @@ services:
             - '@currentUser'
 
     builds.page:
-        class: 'QL\Hal\Controllers\Build\BuildsController'
+        class: 'Hal\UI\Controllers\Build\BuildsController'
         arguments:
             - '@builds.twig'
             - '@doctrine.em'
@@ -185,7 +185,7 @@ services:
     ####################################################################################################################
 
     push.start.page:
-        class: 'QL\Hal\Controllers\Push\StartPushController'
+        class: 'Hal\UI\Controllers\Push\StartPushController'
         arguments:
             - '@push.start.twig'
             - '@doctrine.em'
@@ -198,7 +198,7 @@ services:
         calls: [['setTemplate', ['push/start.twig']]]
 
     push.start.handler:
-        class: 'QL\Hal\Controllers\Push\StartPushHandler'
+        class: 'Hal\UI\Controllers\Push\StartPushHandler'
         arguments:
             - '@doctrine.em'
             - '@push.start.validator'
@@ -210,7 +210,7 @@ services:
             - '@sticky.environment'
             - '@slim.route.parameters'
     push.start.validator:
-        class: 'QL\Hal\Validator\PushStartValidator'
+        class: 'Hal\UI\Validator\PushStartValidator'
         arguments:
             - '@doctrine.em'
             - '@permissions'
@@ -219,7 +219,7 @@ services:
             - '@doctrine.random'
 
     push.rollback.page:
-        class: 'QL\Hal\Controllers\Push\RollbackController'
+        class: 'Hal\UI\Controllers\Push\RollbackController'
         arguments:
             - '@rollback.twig'
             - '@doctrine.em'
@@ -232,7 +232,7 @@ services:
         calls: [['setTemplate', ['push/rollback.twig']]]
 
     push.page:
-        class: 'QL\Hal\Controllers\Push\PushController'
+        class: 'Hal\UI\Controllers\Push\PushController'
         arguments:
             - '@push.twig'
             - '@hal.push'
@@ -242,7 +242,7 @@ services:
         calls: [['setTemplate', ['push/push.twig']]]
 
     pushes.page:
-        class: 'QL\Hal\Controllers\Push\PushesController'
+        class: 'Hal\UI\Controllers\Push\PushesController'
         arguments:
             - '@pushes.twig'
             - '@doctrine.em'
@@ -259,7 +259,7 @@ services:
     ####################################################################################################################
 
     environments.page:
-        class: 'QL\Hal\Controllers\Environment\EnvironmentsController'
+        class: 'Hal\UI\Controllers\Environment\EnvironmentsController'
         arguments: ['@environments.twig', '@doctrine.em']
 
     environments.twig:
@@ -267,7 +267,7 @@ services:
         calls: [['setTemplate', ['environment/environments.twig']]]
 
     environment.page:
-        class: 'QL\Hal\Controllers\Environment\EnvironmentController'
+        class: 'Hal\UI\Controllers\Environment\EnvironmentController'
         arguments:
             - '@environment.twig'
             - '@doctrine.em'
@@ -278,7 +278,7 @@ services:
         calls: [['setTemplate', ['environment/environment.twig']]]
 
     environment.add.page:
-        class: 'QL\Hal\Controllers\Environment\AddEnvironmentController'
+        class: 'Hal\UI\Controllers\Environment\AddEnvironmentController'
         arguments:
             - '@environment.add.twig'
             - '@doctrine.em'
@@ -289,7 +289,7 @@ services:
         calls: [['setTemplate', ['environment/environment.add.twig']]]
 
     environment.edit.page:
-        class: 'QL\Hal\Controllers\Environment\EditEnvironmentController'
+        class: 'Hal\UI\Controllers\Environment\EditEnvironmentController'
         arguments:
             - '@environment.edit.twig'
             - '@doctrine.em'
@@ -302,7 +302,7 @@ services:
         calls: [['setTemplate', ['environment/environment.edit.twig']]]
 
     environment.remove.handler:
-        class: 'QL\Hal\Controllers\Environment\RemoveEnvironmentHandler'
+        class: 'Hal\UI\Controllers\Environment\RemoveEnvironmentHandler'
         arguments:
             - '@doctrine.em'
             - '@session.flasher'
@@ -314,14 +314,14 @@ services:
     ####################################################################################################################
 
     servers.page:
-        class: 'QL\Hal\Controllers\Server\ServersController'
+        class: 'Hal\UI\Controllers\Server\ServersController'
         arguments: ['@servers.twig', '@doctrine.em']
     servers.twig:
         parent: 'twig.auto.template'
         calls: [['setTemplate', ['server/servers.twig']]]
 
     server.page:
-        class: 'QL\Hal\Controllers\Server\ServerController'
+        class: 'Hal\UI\Controllers\Server\ServerController'
         arguments:
             - '@server.twig'
             - '@doctrine.em'
@@ -331,7 +331,7 @@ services:
         calls: [['setTemplate', ['server/server.twig']]]
 
     server.add.page:
-        class: 'QL\Hal\Controllers\Server\AddServerController'
+        class: 'Hal\UI\Controllers\Server\AddServerController'
         arguments:
             - '@server.add.twig'
             - '@doctrine.em'
@@ -343,7 +343,7 @@ services:
         calls: [['setTemplate', ['server/server.add.twig']]]
 
     server.edit.page:
-        class: 'QL\Hal\Controllers\Server\EditServerController'
+        class: 'Hal\UI\Controllers\Server\EditServerController'
         arguments:
             - '@server.edit.twig'
             - '@doctrine.em'
@@ -356,14 +356,14 @@ services:
         calls: [['setTemplate', ['server/server.edit.twig']]]
 
     server.remove.handler:
-        class: 'QL\Hal\Controllers\Server\RemoveServerController'
+        class: 'Hal\UI\Controllers\Server\RemoveServerController'
         arguments:
             - '@doctrine.em'
             - '@session.flasher'
             - '@hal.server'
 
     server.validator:
-        class: 'QL\Hal\Validator\ServerValidator'
+        class: 'Hal\UI\Validator\ServerValidator'
         arguments: ['@doctrine.em']
 
     ####################################################################################################################
@@ -371,7 +371,7 @@ services:
     ####################################################################################################################
 
     user.page:
-        class: 'QL\Hal\Controllers\User\UserController'
+        class: 'Hal\UI\Controllers\User\UserController'
         arguments:
             - '@user.twig'
             - '@hal.user'
@@ -386,21 +386,21 @@ services:
         calls: [['setTemplate', ['user/user.twig']]]
 
     users.page:
-        class: 'QL\Hal\Controllers\User\UsersController'
+        class: 'Hal\UI\Controllers\User\UsersController'
         arguments: ['@users.twig', '@doctrine.em']
     users.twig:
         parent: 'twig.auto.template'
         calls: [['setTemplate', ['user/users.twig']]]
 
     user.settings.page:
-        class: 'QL\Hal\Controllers\User\SettingsController'
+        class: 'Hal\UI\Controllers\User\SettingsController'
         arguments: ['@user.settings.twig', '@currentUser']
     user.settings.twig:
         parent: 'twig.auto.template'
         calls: [['setTemplate', ['user/settings.twig']]]
 
     user.settings.handler:
-        class: 'QL\Hal\Controllers\User\SettingsHandler'
+        class: 'Hal\UI\Controllers\User\SettingsHandler'
         arguments:
             - '@slim.cookies'
             - '@session.flasher'
@@ -408,7 +408,7 @@ services:
             - '%cookie.preferences.ttl%'
 
     user.disable.handler:
-        class: 'QL\Hal\Controllers\User\DisableUserHandler'
+        class: 'Hal\UI\Controllers\User\DisableUserHandler'
         arguments:
             - '@doctrine.em'
             - '@permissions'
@@ -416,7 +416,7 @@ services:
             - '@hal.user'
 
     user.enable.handler:
-        class: 'QL\Hal\Controllers\User\EnableUserHandler'
+        class: 'Hal\UI\Controllers\User\EnableUserHandler'
         arguments:
             - '@doctrine.em'
             - '@session.flasher'
@@ -427,7 +427,7 @@ services:
     ####################################################################################################################
 
     user.token.add.handler:
-        class: 'QL\Hal\Controllers\User\Token\AddTokenController'
+        class: 'Hal\UI\Controllers\User\Token\AddTokenController'
         arguments:
             - '@doctrine.em'
             - '@permissions'
@@ -439,7 +439,7 @@ services:
             - '@slim.route.parameters'
 
     user.token.remove.handler:
-        class: 'QL\Hal\Controllers\User\Token\RemoveTokenController'
+        class: 'Hal\UI\Controllers\User\Token\RemoveTokenController'
         arguments:
             - '@doctrine.em'
             - '@permissions'
@@ -493,7 +493,7 @@ services:
     ####################################################################################################################
 
     github.authorization.page:
-        class: 'QL\Hal\Controllers\OAuth\GithubCallbackController'
+        class: 'Hal\UI\Controllers\OAuth\GithubCallbackController'
         arguments:
             - '@github.authorization.twig'
             - '@slim.request'
@@ -507,7 +507,7 @@ services:
         calls: [['setTemplate', ['user/github.token.error.twig']]]
 
     github.authorization.remove.page:
-        class: 'QL\Hal\Controllers\User\RemoveGithubTokenController'
+        class: 'Hal\UI\Controllers\User\RemoveGithubTokenController'
         arguments:
             - '@github.authorization.remove.twig'
             - '@slim.request'
@@ -525,14 +525,14 @@ services:
     ####################################################################################################################
 
     static.controller:
-        class: 'QL\Hal\Controllers\StaticController'
+        class: 'Hal\UI\Controllers\StaticController'
 
     denied.twig:
         parent: 'twig.auto.template'
         calls: [['setTemplate', ['denied.twig']]]
 
     debug.page:
-        class: 'QL\Hal\Controllers\DebugController'
+        class: 'Hal\UI\Controllers\DebugController'
 
     styleguide.page:
         parent: 'static.controller'
